# self-profile-ice-repro

./: .gitignore  Cargo.toml
erasure-traits/: Cargo.toml
erasure-traits/src/: lib.rs
protocol/: Cargo.toml
protocol-mve-transport/: Cargo.toml
protocol-mve-transport/src/: lib.rs
src/: main.rs
thiserror/: Cargo.toml  README.md
thiserror/impl/: Cargo.toml
thiserror/impl/src/: attr.rs  expand.rs  lib.rs
thiserror/src/: aserror.rs  display.rs  lib.rs
thiserror/tests/: test_display.rs  test_source.rs  test_transparent.rs
thiserror/tests/ui/: no-display.stderr  source-enum-not-error.stderr  source-struct-not-error.stderr
