[package]
name = "compilemem"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
protocol = { path = "./protocol" }
protocol-mve-transport = { path = "./protocol-mve-transport" }
core-error = { path = "./core-error" }
thiserror = { path = "./thiserror" }
serde = { version = "1.0.113", features = ["derive"] }
futures = "0.3.5"

[workspace]
members = ["thiserror/impl", "protocol/derive", "protocol", "protocol-mve-transport", "core-error", "thiserror", "core-futures-io", "erasure-traits"]