[package]
name = "protocol-mve-transport"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
protocol = { path = "../protocol" }
thiserror = { path = "../thiserror" }
futures = { version = "0.3.4" }
core-error = { path = "../core-error" }
void = "1.0.2"
bincode = "1.2.1"
erasure-traits = { path = "../erasure-traits", optional = true }
piper = "0.1.3"

[features]
vessels = ["erasure-traits"]
default = []
